--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,7 +4,9 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  font-family: "Plus Jakarta Sans", sans-serif;
+
+  @apply bg-white;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
